# py312learn

./: README.md  pyproject.toml
src/py312/: __init__.py
